--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js" integrity="sha384-1CmrxMRARb6aLqgBO7yyAxTOQE2AKb9GfXnEo760AUcUmFx3ibVJJAzGytlQcNXd" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 <title>Icetail</title>
-<meta name="description" content="Icetail's Substat,calculate the score of gear's substats rolls">
-<meta name="keywords" content="Icetail's Substat,e7 Gear's Substat,epic seven Gear's Substat,e7 Gear Rating Tool">
+<meta name="description" content="Icetail">
+<meta name="keywords" content="Icetail">
 </head>
 
 <body>
