--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+	<link rel="stylesheet" type="text/css" href="gear.css">
 <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
 	<script src="gear.js"></script>
