--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html>
 
 <head>
-<link rel="stylesheet" type="text/css" href="gear.css">
-<script src="gear.js"></script>		
 <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
+<link rel="stylesheet" type="text/css" href="gear.css">
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.12/dist/css/bootstrap-select.min.css" />
+<script src="gear.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.17/dist/js/bootstrap-select.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js" integrity="sha384-1CmrxMRARb6aLqgBO7yyAxTOQE2AKb9GfXnEo760AUcUmFx3ibVJJAzGytlQcNXd" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-<title>IcetailCalc</title>
-<meta name="description" content="Icetail">
-<meta name="keywords" content="Icetail">
+<title>Icetailab</title>
+<meta name="description" content="Icetail's Substat,calculate the score of gear's substats rolls">
+<meta name="keywords" content="Icetail's Substat,e7 Gear's Substat,epic seven Gear's Substat,e7 Gear Rating Tool">
 </head>
 
 <body>
@@ -85,30 +85,30 @@
   <div class="grid-label font-weight-bold" id="label-atkper">攻擊力百分比</div>
   <div class="grid-label font-weight-bold" id="label-hpper">生命力百分比</div> 
   <div class="grid-label font-weight-bold" id="label-eff">效果命中</div>
-  <input type="number" class="form-control" id="atkper" min="0" max="48" placeholder="">
-  <input type="number" class="form-control" id="hpper" min="0" max="48" placeholder="">
-  <input type="number" class="form-control" id="eff" min="0" max="48" placeholder="">
+  <input type="number" class="form-control" id="atkper" min="0" max="27" placeholder="">
+  <input type="number" class="form-control" id="hpper" min="0" max="26" placeholder="">
+  <input type="number" class="form-control" id="eff" min="0" max="27" placeholder="">
   
   <div class="grid-label font-weight-bold" id="label-atkflat">攻擊力數值</div>
   <div class="grid-label font-weight-bold" id="label-hpflat">生命力數值</div> 
   <div class="grid-label font-weight-bold" id="label-res">效果抗性</div>
   <input type="number" class="form-control" id="atkflat" min="0" max="282" placeholder="">
-  <input type="number" class="form-control" id="hpflat" min="0" max="1200" placeholder="">
-  <input type="number" class="form-control" id="res" min="0" max="48" placeholder="">
+  <input type="number" class="form-control" id="hpflat" min="0" max="1017" placeholder="">
+  <input type="number" class="form-control" id="res" min="0" max="27" placeholder="">
     
   
   <div class="grid-label font-weight-bold" id="label-critch">暴擊率</div> 
   <div class="grid-label font-weight-bold" id="label-defper">防禦力百分比</div>
   <div class="grid-label font-weight-bold" id="label-spd">速度值</div>   
-  <input type="number" class="form-control" id="critch" min="0" max="48" placeholder="">
-  <input type="number" class="form-control" id="defper" min="0" max="48" placeholder="">
-  <input type="number" class="form-control" id="spd" min="0" max="24" placeholder="">
+  <input type="number" class="form-control" id="critch" min="0" max="16" placeholder="">
+  <input type="number" class="form-control" id="defper" min="0" max="27" placeholder="">
+  <input type="number" class="form-control" id="spd" min="0" max="16" placeholder="">
 
   <div class="grid-label font-weight-bold" id="label-critdmg">暴擊傷害</div>
   <div class="grid-label font-weight-bold" id="label-defflat">防禦力數值</div>
   <div class="grid-label font-weight-bold" id="label-score">裝備分數</div>
-  <input type="number" class="form-control" id="critdmg" min="0" max="48" placeholder="">
-  <input type="number" class="form-control" id="defflat" min="0" max="198" placeholder="">
+  <input type="number" class="form-control" id="critdmg" min="0" max="26" placeholder="">
+  <input type="number" class="form-control" id="defflat" min="0" max="162" placeholder="">
   <div class="grid-result" id="score">0</div>
   
   <button type="button" class="btn btn-success text-center align-middle font-weight-bold" id="btn-calc" onclick="calc()">計算</button>
