--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
 <div class="col-12 col-sm-6 ">
   <div class="row">
   <div class="col-6 col-sm-4">
+  <div class="grid-label font-weight-bold" id="label-sub-presets">作者:B站搜索Icetail_official</div>	  
+  </div> 
+  </div>	  
+</div>
+<div class="col-12 col-sm-6 ">
+  <div class="row">
+  <div class="col-6 col-sm-4">
   <div class="grid-label font-weight-bold" id="label-sub-presets">有效屬性預設值</div>
   <select id="gear-sub-presets" class="custom-select" name="gear-sub-presets" onchange="setGearUsefulSub()" data-width="100%">
     <option id="gus-all"   value="gus-all" >全選</option>
