--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <div class="col-12 col-sm-6 ">
   <div class="row">
   <div class="col-6 col-sm-4">
-  <div class="grid-label font-weight-bold" id="label-sub-presets">作者:B站搜索Icetail_official</div>	  
+  <div class="grid-label font-weight-bold" id="label-present">作者:B站搜索Icetail_official</div>	  
   </div> 
   </div>	  
 </div>
